# swift-wasm-sandbox

./: LICENSE  README.md  setup-spin.sh
browser-only/: index.html  style.css
browser-only/examples/: hello.swift
browser-only/js/: editor.js  main.js  swift-wasm-loader.js
spin-integration/: Cargo.toml  spin.toml
spin-integration/src/: lib.rs
spin-integration/web/: index.html
spin-integration/web/examples/: fibonacci.swift
spin-integration/web/js/: main.js
swift-cloud/: README.md  build-deploy.sh
swift-cloud/examples/api-proxy/: Package.swift
swift-cloud/examples/api-proxy/Sources/api-proxy/: main.swift
swift-cloud/examples/hello-world/: Package.swift
swift-cloud/examples/hello-world/Sources/hello-world/: main.swift
swift-cloud/playground-integration/: SwiftCloudIntegration.md
