[package]
name = "swift-executor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v3.0.0" }
tempfile = "3.4"

[workspace]